[project]
name = "yt-playlist-archiver"
version = "0.1.0"
description = "A Python tool for retrieving, archiving, searching, and exporting YouTube playlist data using the YouTube Data API v3. The program stores playlist metadata and video information locally in a SQLite database, allowing offline inspection, searching, and change tracking over time."
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.14,<3.15"
dependencies = [
    "argparse (>=1.4.0,<2.0.0)",
    "pandas (>=3.0.3,<4.0.0)",
    "google-api-python-client (>=2.197.0,<3.0.0)",
    "google-auth (>=2.55.0,<3.0.0)",
    "google-auth-oauthlib (>=1.4.0,<2.0.0)",
    "pyside6 (>=6.11.1,<7.0.0)",
    "pyinstaller (>=6.21.0,<7.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false